# milkv-zephyros

./: .gitignore  README.md
blinky/: CMakeLists.txt  app.overlay  milkv_duo.overlay  prj.conf
blinky/src/: main.c
boards/riscv/milkv-duo/: Kconfig.board  Kconfig.defconfig  milkv_duo.dts  milkv_duo.yaml  milkv_duo_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/ipm/: CMakeLists.txt  Kconfig  cv180x_ipm.c
drivers/timer/: CMakeLists.txt  Kconfig  riscv_machine_timer.c
dts/bindings/: sophgo,cv1800b-clint.yaml  sophgo,cv180x-ipm.yaml  vendor-prefixes.txt
manifest-repo/: west.yml
openamp/: CMakeLists.txt  README.rst  milkv_duo.overlay  prj.conf
openamp/src/: main_remote.c  resource_table.ld
soc/riscv/: CMakeLists.txt
soc/riscv/sophgo/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc
soc/riscv/sophgo/cv1800b/: CMakeLists.txt  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  linker.ld  resource_table.c  resource_table.ld
